rebase test fixes